sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:3: error: not found: value getNombreValeur
  var ecart:Int = ((getNombreValeur().toDouble)/2).toInt
                    ^