sort.basic.shell.AlgShellSort.scala.code
def shellSort() {
  var ecart:Int = ((getNombreValeur().toDouble)/2).toInt
  for (i <- 1 to getNombreValeurs()-1){
    var tmp:Int = getValeur(i)
    var j:Int = i
    while ((j>0)&&(tmp<getValeur(j-ecart))){
      setValeur(j,getValeur(j-1))
      j = j-1
    }
    setValeur(j,tmp)
    ecart = ((ecart.toDouble)/2).toInt
  }
}